--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="hackday.com.carhack.MainActivity$PlaceholderFragment">
+    tools:context="hackday.com.carhack.MainActivity">
 
     <SeekBar
         android:id="@+id/seekLeft"
@@ -25,103 +25,14 @@
         android:max="100"
         android:progress="50" />
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true">
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/btn_go"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:src="@drawable/ic_clear_black_24dp" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/BackLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/BackRightButton"
-            android:layout_width="140dp"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="10dp"
-            android:text="Back Right" />
-
-        <Button
-            android:id="@+id/BackLeftButton"
-            android:layout_width="140dp"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:text="Back Left" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/AddEditLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/ForwardLayout"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/AddButton"
-            android:layout_width="140dp"
-            android:layout_height="50dp"
-            android:layout_alignParentTop="true"
-            android:text="Add" />
-
-        <Button
-            android:id="@+id/EditButton"
-            android:layout_width="140dp"
-            android:layout_height="50dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:text="Edit" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/ForwardLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="50dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/FleftButton"
-            android:layout_width="140dp"
-            android:layout_height="50dp"
-            android:text="Forward Left" />
-
-        <Button
-            android:id="@+id/FrightButton"
-            android:layout_width="140dp"
-            android:layout_height="50dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:text="Forward Right" />
-    </RelativeLayout>
-
     <Button
-        android:layout_marginTop="20dp"
         android:id="@+id/btn_addsecond"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/seekRight"
+        android:layout_marginTop="20dp"
         android:text="+1s" />
+
 
     <TextView
         android:id="@+id/txt_secs"
@@ -132,5 +43,73 @@
         android:layout_marginTop="10dp"
         android:text="0s"
         android:textSize="20dp" />
+
+    <RelativeLayout
+        android:id="@+id/lyt_add_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/lyt_forward">
+
+        <Button
+            android:id="@+id/btn_add"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:text="Add" />
+
+        <Button
+            android:id="@+id/btn_edit"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="Edit" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/lyt_forward"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/lyt_back">
+
+        <Button
+            android:id="@+id/btn_for_left"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:text="Forward Left" />
+
+        <Button
+            android:id="@+id/btn_for_right"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="Forward Right" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/lyt_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+        <Button
+            android:id="@+id/btn_back_left"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:text="Back Left" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_go"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:src="@mipmap/ic_launcher"/>
+
+        <Button
+            android:id="@+id/btn_back_right"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="50dp"
+            android:text="Back Right" />
+    </RelativeLayout>
 
 </RelativeLayout>
