--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -25,23 +25,14 @@
         android:max="100"
         android:progress="50" />
 
-    <Button
-        android:id="@+id/btn_addsecond"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/txt_secs"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_below="@+id/seekRight"
         android:layout_marginTop="20dp"
-        android:text="+1s" />
-
-
-    <TextView
-        android:id="@+id/txt_secs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_addsecond"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:text="0s"
+        android:hint="Enter time in seconds. "
         android:textSize="20dp" />
 
     <RelativeLayout
