--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,21 +13,39 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:layout_marginBottom="50dp"
         android:max="100"
         android:progress="50" />
+    <TextView
+        android:id="@+id/txt_right_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="50"
+        android:textSize="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_below="@id/seekLeft"
+        android:layout_alignParentRight="true"/>
+    <TextView
+        android:id="@+id/txt_left_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="50"
+        android:textSize="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentRight="true"/>
 
     <SeekBar
         android:id="@+id/seekRight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/seekLeft"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="30dp"
         android:max="100"
         android:progress="50" />
 
     <EditText
         android:id="@+id/txt_secs"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_below="@+id/seekRight"
@@ -42,19 +60,19 @@
         android:layout_above="@+id/lyt_forward">
 
         <Button
+            android:layout_centerInParent="true"
             android:id="@+id/btn_add"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:text="Add" />
 
-        <Button
-            android:id="@+id/btn_edit"
-            android:layout_width="140dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="Edit" />
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+    </RelativeLayout>
     <RelativeLayout
         android:id="@+id/lyt_forward"
         android:layout_width="match_parent"
@@ -87,13 +105,6 @@
             android:layout_height="wrap_content"
             android:text="Back Left" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/btn_go"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:src="@mipmap/ic_launcher"/>
-
         <Button
             android:id="@+id/btn_back_right"
             android:layout_width="140dp"
@@ -102,5 +113,14 @@
             android:layout_marginBottom="50dp"
             android:text="Back Right" />
     </RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_go"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"
+        android:src="@mipmap/ic_launcher"/>
 
 </RelativeLayout>
