--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,31 +8,39 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="hackday.com.carhack.MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Left" />
+
     <SeekBar
         android:id="@+id/seekLeft"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:layout_marginBottom="50dp"
+        android:layout_marginTop="30dp"
         android:max="100"
         android:progress="50" />
+
     <TextView
         android:id="@+id/txt_right_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="50"
-        android:textSize="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_alignParentRight="true"
         android:layout_below="@id/seekLeft"
-        android:layout_alignParentRight="true"/>
+        android:layout_marginBottom="10dp"
+        android:text="50"
+        android:textSize="20dp" />
+
     <TextView
         android:id="@+id/txt_left_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="50"
-        android:textSize="20dp"
+        android:layout_alignParentRight="true"
         android:layout_marginBottom="10dp"
-        android:layout_alignParentRight="true"/>
+        android:text="50"
+        android:textSize="20dp" />
+
 
     <SeekBar
         android:id="@+id/seekRight"
@@ -43,15 +51,40 @@
         android:max="100"
         android:progress="50" />
 
+    <TextView
+        android:id="@+id/txt_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/seekRight"
+        android:text="Right" />
+
     <EditText
+
         android:id="@+id/txt_secs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
         android:layout_below="@+id/seekRight"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
-        android:hint="Enter time in seconds. "
+        android:hint="Time?"
         android:textSize="20dp" />
+
+    <ImageView
+        android:id="@+id/img_camera_pic"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@id/txt_secs"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_clear_black_24dp" />
+
+    <Switch
+        android:id="@+id/switch_obs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txt_secs"
+        android:text="Check obstacles"
+        android:textColor="@color/colorAccent" />
 
     <RelativeLayout
         android:id="@+id/lyt_add_edit"
@@ -60,7 +93,7 @@
         android:layout_above="@+id/lyt_forward">
 
         <Button
-            android:layout_centerInParent="true"
+
             android:id="@+id/btn_add"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
@@ -73,6 +106,7 @@
         android:layout_height="wrap_content">
 
     </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/lyt_forward"
         android:layout_width="match_parent"
@@ -119,8 +153,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
         android:layout_centerHorizontal="true"
-        android:src="@mipmap/ic_launcher"/>
+        android:layout_marginBottom="40dp"
+        android:src="@drawable/ic_send_white_24dp" />
 
 </RelativeLayout>
