--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
+        android:layout_margin="20dp"
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
