--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,6 +10,7 @@
     tools:context="hackday.com.carhack.MainActivity">
 
     <TextView
+        android:id="@+id/txt_Left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Left" />
@@ -18,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:max="100"
         android:progress="50" />
 
